--- a/server/package.json
+++ b/server/package.json
@@ -4,16 +4,20 @@
   "description": "Node Server for Omamori App",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "tsc && node -r esm ./build/server.js",
     "dev": "nodemon server.js"
   },
   "author": "RazzleDazzle",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.18.0",
+    "@types/express": "^4.17.1",
+    "@types/node": "^12.7.5",
+    "@types/qs": "^6.5.3",
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
-    "express": "^4.16.4",
+    "esm": "^3.2.25",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.0",
     "open": "^6.2.0",
