--- a/web/package.json
+++ b/web/package.json
@@ -4,23 +4,24 @@
   "private": true,
   "dependencies": {
     "@emotion/core": "^10.0.10",
-    "@material-ui/core": "^3.9.3",
-    "@material-ui/icons": "^3.0.2",
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "@mdi/js": "^3.6.95",
     "@mdi/react": "^1.1.0",
-    "axios": "^0.18.0",
+    "@types/webpack-env": "^1.14.0",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "date-fns": "^1.30.1",
-    "firebase": "^5.10.1",
+    "firebase": "^6.6.1",
     "mdi-react": "^5.3.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-modal": "^3.8.1",
-    "react-redux": "^7.0.2",
+    "react": "^16.9.0",
+    "react-dom": "^16.9.0",
+    "react-modal": "^3.10.1",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "react-spinners": "^0.5.4",
-    "redux": "^4.0.1",
+    "react-scripts": "3.1.1",
+    "react-spinners": "^0.6.1",
+    "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
   },
@@ -45,5 +46,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.18",
+    "@types/prop-types": "^15.7.2",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^4.3.5",
+    "prop-types": "^15.7.2",
+    "source-map-loader": "^0.2.4",
+    "ts-loader": "^6.1.0",
+    "typescript": "^3.6.3"
   }
 }
